--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./ressources/CSS/style.css">
 </head>
 <body>
-    <h1>My first Html File</h1>
+    <header>
+        <div class="logo-container ">
+            <img src="./ressources/images/ic-logo.svg" alt="Page logo">
+            <p class="desktop"><stong class="logo">Colmar</stong>Academy</p>
+        </div>
+        <nav class="menu desktop">
+            <ul>
+                <li>On campus</li>
+                <li>Online</li>
+                <li>or companies</li>
+                <li>Sign in</li>
+            </ul>
+        </nav>
+        <nav class="menu mobile">
+            <ul>
+                <li>
+                    <img src="./ressources/images/ic-on-campus.svg" alt="On campus icon" />
+                </li>
+                <li>
+                    <img src="./ressources/images/ic-online.svg" alt="Online icon" />
+                </li>
+                <li>
+                    <img src="./ressources/images/ic-login.svg" alt="login icon" />
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
