--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <nav class="menu desktop">
             <ul>
-                <li>On campus</li>
-                <li>Online</li>
-                <li>or companies</li>
-                <li>Sign in</li>
+                <li><a href="#">On campus</a></li>
+                <li><a href="#">Online</a></li>
+                <li><a href="#">or companies</a></li>
+                <li><a href="#">Sign in</a></li>
             </ul>
         </nav>
         <nav class="menu mobile">
