banner section content + style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colmar academy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./ressources/images/ic-logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="./ressources/CSS/style.css">
 </head>
@@ -36,5 +39,20 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="gray-background">
+            <div id="banner-container">
+                <div class="image-container">
+                    <img src="./ressources/images/banner.jpg" alt="Banner image students studying">
+                </div>
+                <div class="banner-content">
+                    <h2>Learn something <br> new everyday</h2>
+                    <p>Lorem ipsum dolor sit amet, <br>
+                    consectetur adipiscing elit.</p>
+                    <button>Start here</button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
