--- a/index.html
+++ b/index.html
@@ -51,6 +51,52 @@
                     consectetur adipiscing elit.</p>
                     <button>Start here</button>
                 </div>
+            </div>            
+        </div>
+        <div id="aritcles-container">
+            <div id="main-article">
+                    <img src="./ressources/images/information-main.jpg" alt="main article image">
+                    <h2>It doesn't hurt to keep practicing </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aliquid, esse voluptatem temporibus deserunt incidunt placeat, ex nostrum porro quis ullam libero. 
+                        Asperiores eos eius necessitatibus neque ullam officia reiciendis repudiandae!
+                    </p>
+                    <p>
+                        Emanuel, Sr Strategist at Hiring.com
+                    </p>
+            </div>
+            <div id="other-articles">
+               <div class="info">
+                   <div class="info-image">
+                        <img src="./ressources/images/information-orientation.jpg" alt="Image of orientation day">
+                   </div>
+                   <div class="info-content">
+                        <h3>Orientation date</h3> 
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a href="#">Read more</a>                   
+                    </div>
+               </div>
+               <div class="info">
+                <div class="info-image">
+                    <img src="./ressources/images/information-campus.jpg" alt="Image of the campus">
+               </div>
+               <div class="info-content">
+                    <h3>Our Campus</h3> 
+                    <p>Find which campus is close by you</p>
+                    <a href="#">Read more</a>                   
+                </div>
+               </div>
+               <div class="info">
+                <div class="info-image">
+                    <img src="./ressources/images/information-guest-lecture.jpg" alt="Image of Oliver Sack the guest lecture">
+               </div>
+               <div class="info-content">
+                    <h3>Our guest lecture</h3> 
+                    <p>Join a keynote with Oliver Sack about msuic in medical treatment</p>
+                    <a href="#">Read more</a>                   
+                </div>
+               </div> 
             </div>
         </div>
     </main>
