courses section content +  style

--- a/index.html
+++ b/index.html
@@ -99,6 +99,59 @@
                </div> 
             </div>
         </div>
+        <div id="courses-section" class="gray-background">
+            <h2>Start learning</h2>
+            <div id="courses-container">
+                <div class="course">
+                    <img src="./ressources/images/course-software.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Software engineering</h4>
+                    <p>Courses</p>
+                    <p>Web Developmenet, Mobile Developmenet, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="./ressources/images/course-computer-art.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Computer art</h4>
+                    <p>Courses</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="./ressources/images/course-design.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Design</h4>
+                    <p>Courses</p>
+                    <p>User Experience Design User Research, Visual Design</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="./ressources/images/course-data.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Data</h4>
+                    <p>Courses</p>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="./ressources/images/course-business.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Business</h4>
+                    <p>Courses</p>
+                    <p>Product Development, Business Development,Startup</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="./ressources/images/course-software.jpg" alt="Course software image">
+                    <div class="course-content">
+                    <h4>Marketing</h4>
+                    <p>Courses</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
