thesis section content + style

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>            
         </div>
         <div id="aritcles-container">
-            <div id="main-article">
+            <div class="main-article">
                     <img src="./ressources/images/information-main.jpg" alt="main article image">
                     <h2>It doesn't hurt to keep practicing </h2>
                     <p>
@@ -66,7 +66,7 @@
                         Emanuel, Sr Strategist at Hiring.com
                     </p>
             </div>
-            <div id="other-articles">
+            <div class="other-articles">
                <div class="info">
                    <div class="info-image">
                         <img src="./ressources/images/information-orientation.jpg" alt="Image of orientation day">
@@ -152,6 +152,43 @@
                 </div>
             </div>
         </div>
+        <div id="thesis-section">
+            <h2>Thesis exhibit</h2>
+            <div id="thesis-container">
+            <div class="main-thesis">
+               <video controls autoplay>
+                    <source src="./ressources/videos/thesis.mp4">
+               </video>
+               <h4>Reimagine urban</h4>
+               <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ipsa molestias sint beatae consectetur ullam quis temporibus aspernatur magnam! Vero est deleniti excepturi possimus ipsum ut corporis fuga aspernatur aut.
+               </p>
+            </div>
+            <div class="other-thesis">
+                <div class="info">
+                    <div class="info-image">
+                        <img src="./ressources/images/thesis-fisma.jpg" alt="Image of the campus">
+                   </div>
+                   <div class="info-content">
+                        <h3>Fisma: Design and Prototype</h3> 
+                        <p>Designer showcase of new prototype product</p>                  
+                    </div>
+                   </div>
+                   <div class="info">
+                    <div class="info-image">
+                        <img src="./ressources/images/thesis-now-and-then.jpg" alt="Image of the campus">
+                   </div>
+                   <div class="info-content">
+                        <h3>Now and then</h3> 
+                        <p>Research study about New York</p>                  
+                    </div>
+                   </div>
+            </div>
+            </div>
+        </div>
+        <footer>
+            
+        </footer>
     </main>
 </body>
 </html>
