--- a/index.html
+++ b/index.html
@@ -187,7 +187,15 @@
             </div>
         </div>
         <footer>
-            
+            <div id="copyrights">
+                © 2016 Colmar Academy. All rights reserved
+            </div>
+            <nav>
+               <ul>
+                   <li><a href="#">Terms</a></li>
+                   <li><a href="">Privacy</a></li>
+               </ul> 
+            </nav>
         </footer>
     </main>
 </body>
