--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo-container ">
-            <img src="./ressources/images/ic-logo.svg" alt="Page logo">
+            <img src="./ressources/images/ic-logo.svg" class="desktop" alt="Page logo">
             <p class="desktop"><stong class="logo">Colmar</stong>Academy</p>
         </div>
         <nav class="menu desktop">
@@ -25,22 +25,9 @@
                 <li><a href="#">Sign in</a></li>
             </ul>
         </nav>
-        <nav class="menu mobile">
-            <ul>
-                <li>
-                    <img src="./ressources/images/ic-on-campus.svg" alt="On campus icon" />
-                </li>
-                <li>
-                    <img src="./ressources/images/ic-online.svg" alt="Online icon" />
-                </li>
-                <li>
-                    <img src="./ressources/images/ic-login.svg" alt="login icon" />
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <div class="gray-background">
+        <div id="banner-section">
             <div id="banner-container">
                 <div class="image-container">
                     <img src="./ressources/images/banner.jpg" alt="Banner image students studying">
@@ -54,7 +41,7 @@
             </div>            
         </div>
         <div id="aritcles-container">
-            <div class="main-article">
+            <div class="main-article desktop">
                     <img src="./ressources/images/information-main.jpg" alt="main article image">
                     <h2>It doesn't hurt to keep practicing </h2>
                     <p>
@@ -69,7 +56,8 @@
             <div class="other-articles">
                <div class="info">
                    <div class="info-image">
-                        <img src="./ressources/images/information-orientation.jpg" alt="Image of orientation day">
+                        <img src="./ressources/images/information-orientation.jpg" class="desktop" alt="Image of orientation day">
+                        <img src="./ressources/images/information-orientation-mobile.jpg" class="mobile" alt="Image of orientation day">
                    </div>
                    <div class="info-content">
                         <h3>Orientation date</h3> 
@@ -79,7 +67,8 @@
                </div>
                <div class="info">
                 <div class="info-image">
-                    <img src="./ressources/images/information-campus.jpg" alt="Image of the campus">
+                    <img src="./ressources/images/information-campus.jpg" class="desktop" alt="Image of the campus">
+                    <img src="./ressources/images/information-campus-mobile.jpg" class="mobile" alt="Image of the campus">
                </div>
                <div class="info-content">
                     <h3>Our Campus</h3> 
@@ -89,7 +78,8 @@
                </div>
                <div class="info">
                 <div class="info-image">
-                    <img src="./ressources/images/information-guest-lecture.jpg" alt="Image of Oliver Sack the guest lecture">
+                    <img src="./ressources/images/information-guest-lecture.jpg" class="desktop" alt="Image of Oliver Sack the guest lecture">
+                    <img src="./ressources/images/information-guest-lecture-mobile.jpg"  class="mobile" alt="Image of Oliver Sack the guest lecture">
                </div>
                <div class="info-content">
                     <h3>Our guest lecture</h3> 
@@ -190,7 +180,7 @@
             <div id="copyrights">
                 © 2016 Colmar Academy. All rights reserved
             </div>
-            <nav>
+            <nav class="desktop">
                <ul>
                    <li><a href="#">Terms</a></li>
                    <li><a href="">Privacy</a></li>
