changing max-width for the mobile screen + fixing nav menu for mobile

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
                 <li><a href="#">Sign in</a></li>
             </ul>
         </nav>
+        <div class="menu-logo mobile">
+            <div class="logo-container">
+                <img src="./ressources/images/ic-logo.svg" alt="icone">
+            </div>
+            <div class="logo-container">
+                <img src="./ressources/images/ic-on-campus.svg" alt="icone">
+            </div>
+            <div class="logo-container">
+                <img src="./ressources/images/ic-online.svg" alt="icone">
+            </div>
+            <div class="logo-container">
+                <img src="./ressources/images/ic-login.svg" alt="icone">
+            </div>
+        </div>
     </header>
     <main>
         <div id="banner-section">
