courses section version mobile

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                </div> 
             </div>
         </div>
-        <div id="courses-section" class="gray-background">
+        <div id="courses-section" class="gray-background desktop">
             <h2>Start learning</h2>
             <div id="courses-container">
                 <div class="course">
@@ -153,6 +153,29 @@
                     <p>Courses</p>
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="mobile-course-section" class="mobile">
+            <h2>Start learning</h2>
+            <div id="courses-menu">
+                <div class="course-item">
+                    <p>Software engineering</p>
+                </div>
+                <div class="course-item">
+                    <p>Computer art</p>
+                </div>
+                <div class="course-item">
+                    <p>Design</p>
+                </div>
+                <div class="course-item">
+                    <p>Data</p>
+                </div>
+                <div class="course-item">
+                    <p>Business</p>
+                </div>
+                <div class="course-item">
+                    <p>Marketing</p>
                 </div>
             </div>
         </div>
