--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
                <video controls autoplay>
                     <source src="./ressources/videos/thesis.mp4">
                </video>
-               <h4>Reimagine urban</h4>
-               <p>
+               <h4 class="desktop">Reimagine urban</h4>
+               <p class="desktop">
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ipsa molestias sint beatae consectetur ullam quis temporibus aspernatur magnam! Vero est deleniti excepturi possimus ipsum ut corporis fuga aspernatur aut.
                </p>
             </div>
-            <div class="other-thesis">
+            <div class="other-thesis desktop" >
                 <div class="info">
                     <div class="info-image">
                         <img src="./ressources/images/thesis-fisma.jpg" alt="Image of the campus">
